--- a/src/components/sections/landing/ClientsSection.astro
+++ b/src/components/sections/landing/ClientsSection.astro
@@ -41,7 +41,7 @@ interface Props {
     {
       partners.map((partner) => (
         <a href={partner.href} target="_blank" rel="noopener noreferrer">
-              <div set:html={partner.icon} />
+            <img src={partner.icon} alt={partner.name} class="w-24 h-auto" />
         </a>
       ))
     }
