--- a/src/components/sections/landing/HeroSectionAlt.astro
+++ b/src/components/sections/landing/HeroSectionAlt.astro
@@ -8,7 +8,7 @@ const { title, subTitle, url } = Astro.props;
 const btnTitle =
   Astro.currentLocale === "fr"
     ? "Continuer avec Github"
-    : "Continue with Github";
+    : "Acesse nosso Instagram";
 
 // Define TypeScript interface for props
 interface Props {
