--- a/src/components/ui/buttons/GithubBtn.astro
+++ b/src/components/ui/buttons/GithubBtn.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from "@components/ui/icons/Icon.astro";
+import { Icon } from 'astro-icon/components';
 const { title, url } = Astro.props;
 
 interface Props {
@@ -22,6 +22,6 @@ const ringClasses = "dark:ring-zinc-200";
   target="_blank"
   rel="noopener noreferrer"
 >
-  <Icon name="github" />
+  <Icon name="line-md:instagram" width={32} height={32} />
   {title}
 </a>
